--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -3,12 +3,15 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 }
 
-
 .mobile .page-wrap {
-  max-height: calc(100% - 49px - 63px);
+  height: 100%;
   overflow-y: auto;
+  /* tweak custom scrollbar */
+  --bar-width: 4px;
+  --bar-color: var(--grey-400);
 }
 .mobile .page-wrap > * { 
   padding: 16px;
